--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <h1>Bienvenue à Genève</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -20,20 +20,57 @@
     <div class="container">
         <div class="row">
             <!--Étape 2 – ajout de 3 conteneurs colonne. Comme une ligne se sépare en 12 colonnes maximum, j'ai choisi de faire une colonne qui occupe la moitié de la page et deux colonnes qui occupent chacune un quart de la page. J'ai choisi la classe qui inclut le code "md" pour medium device, ce qui signifie que le breakpoint  (passage d'un affiche côte-à-côte à un affichage stacked) est fixé pour les mediums devices selon la taille déterminée dans le CSS de Bootstrap.-->
-            <div class="col-md-6">blablabla</div>
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <!--Étape 3 – ajout de card avec une Image cap – code copié de Bootstrap (https://getbootstrap.com/docs/5.3/components/card/#image-caps) puis modifié-->
                 <div class="card mb-3">
                     <!--Étape 3 – ajout d'une image tirée d'Unsplash et modification du texte-->
-                    <img src="https://images.unsplash.com/photo-1580316205823-da182af14ab3?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Coucher de soleil à Genève">
+                    <img src="https://images.unsplash.com/photo-1580316205823-da182af14ab3?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        class="card-img-top" alt="Coucher de soleil à Genève">
                     <div class="card-body">
-                      <h5 class="card-title">Genève</h5>
-                      <p class="card-text">Genève est une ville magnifique qu'il faut absolument visiter. Les couchers de soleil sont splendides.</p>
-                      <p class="card-text"><small class="text-body-secondary">Photo de <a href="https://unsplash.com/fr/@greyroseblack?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dino Sabic</a> sur <a href="https://unsplash.com/fr/photos/pont-au-dessus-de-leau-pendant-la-nuit-RHH5rw7GMek?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></small></p>
+                        <h5 class="card-title">Genève</h5>
+                        <p class="card-text">Genève est une ville magnifique qu'il faut absolument visiter. Les couchers
+                            de soleil sont splendides.</p>
+                        <p class="card-text"><small class="text-body-secondary">Photo de <a
+                                    href="https://unsplash.com/fr/@greyroseblack?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dino
+                                    Sabic</a> sur <a
+                                    href="https://unsplash.com/fr/photos/pont-au-dessus-de-leau-pendant-la-nuit-RHH5rw7GMek?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></small>
+                        </p>
                     </div>
-                  </div>
+                </div>
             </div>
-            <div class="col-md-3">blablabla</div>
+            <div class="col-md-3">
+                <!--Etape 4 – ajout du carousel à partir du code de Bootstrap (https://getbootstrap.com/docs/5.3/components/carousel/#how-it-works) et ajout d'images tirées d'Unsplash dans le carousel-->
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://images.unsplash.com/photo-1580191947416-62d35a55e71d?q=80&w=3271&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="d-block w-100" alt="Welcome">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://images.unsplash.com/photo-1561387194-e3d99bc732fc?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="d-block w-100" alt="Jet d'eau de Genève">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://images.unsplash.com/photo-1560354142-ead65b0b2329?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="d-block w-100" alt="Plaine de Plainpalais">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <!--Etape 5 – utilisation d'une classe contextuelle avec l'ajout d'un bouton qui donne accès à une page externe-->
+                <a class="btn btn-primary" href="https://www.geneve.com/fr/" target="_blank" role="button">Site web de l'Office du Tourisme</a>
+            </div>
         </div>
 
     </div>
