--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Etape 1b – ajout de la référence au fichier CSS-->
     <link href="index.css" rel="stylesheet">
+    <!--Etape 6 – ajout de la référence à la icon fonts stylesheet-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-    <h1>Bienvenue à Laussane</h1>
+    <h1>Bienvenue à Genève
+        <!--Etape 6 – Ajout d'une icone -->
+        <i class="bi-heart" style="font-size: 3rem; color: darkred;"></i>
+    </h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -30,7 +36,10 @@
                         <h5 class="card-title">Genève</h5>
                         <p class="card-text">Genève est une ville magnifique qu'il faut absolument visiter. Les couchers
                             de soleil sont splendides.</p>
-                        <p class="card-text"><small class="text-body-secondary">Photo de <a
+                        <p class="card-text"><small class="text-body-secondary">
+                                <!--Etape 6 – Ajout d'une icone -->
+                                <i class="bi-camera-fill" style="font-size: 1rem; color: cornflowerblue;"></i>
+                                Photo de <a
                                     href="https://unsplash.com/fr/@greyroseblack?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dino
                                     Sabic</a> sur <a
                                     href="https://unsplash.com/fr/photos/pont-au-dessus-de-leau-pendant-la-nuit-RHH5rw7GMek?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></small>
@@ -69,12 +78,29 @@
             </div>
             <div class="col-md-3">
                 <!--Etape 5 – utilisation d'une classe contextuelle avec l'ajout d'un bouton qui donne accès à une page externe-->
-                <a class="btn btn-primary" href="https://www.geneve.com/fr/" target="_blank" role="button">Site web de l'Office du Tourisme</a>
+                <a class="btn btn-primary" href="https://www.geneve.com/fr/" target="_blank" role="button">Site web de
+                    l'Office du Tourisme</a>
             </div>
         </div>
 
     </div>
-
+    <!--Etape 7 – ajout d'une citation avec source (tiré de https://getbootstrap.com/docs/5.3/content/typography/#blockquotes)-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <figure class="text-center">
+                    <blockquote class="blockquote">
+                        <p>Je songe parfois à la quantité de boeuf qu'il faudrait pour faire du bouillon avec le Lac de
+                            Genève.</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        Pierre Dac dans <cite title="Source Title">Les pensées</cite> (1972) [<a
+                            href="https://www.dicocitations.com/citation.php?mot=Geneve" target="_blank">Source</a>]
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
     <!-- -->
 </body>
 
