--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
                 </figure>
             </div>
         </div>
+        <!--Etape 8 – ajout d'un élément-->
+        <div class="row">
+            <!--Etape 8 – ajout de la classe "ms-md-5"-->
+            <!--Etape 8 – La classe "ms-md-5" ajoute une marge (m) à gauche (s). Le breakpoint est réglé aux medium devices (md). Donc tant que l'affichage est plus grand que les mediums devices, la marge est présente. Dans le cas contraire, il n'y a pas de marge. Selon Bootstrap (https://getbootstrap.com/docs/5.0/utilities/spacing/), la taille de 5 est "for classes that set the margin or padding to $spacer * 3".-->
+            <div class="pub ms-md-5">
+                Viens visiter Genève!
+            </div>
+        </div>
     </div>
     <!-- -->
 </body>
